# rc2example

./: README.md
Rc2exampleProject/: build.gradle  settings.gradle
Rc2exampleProject/app/: CMakeLists.txt  build.gradle
Rc2exampleProject/app/src/main/: AndroidManifest.xml
Rc2exampleProject/app/src/main/res/values/: strings.xml
Rc2exampleProject/bar/: build.gradle
Rc2exampleProject/bar/src/androidTest/java/com/gpxblog/bar/: ExampleInstrumentedTest.java
Rc2exampleProject/bar/src/main/: AndroidManifest.xml
Rc2exampleProject/bar/src/test/java/com/gpxblog/bar/: ExampleUnitTest.java
Rc2exampleProject/bar2/: CMakeLists.txt  build.gradle
Rc2exampleProject/bar2/src/androidTest/java/com/gpxblog/bar2/: ExampleInstrumentedTest.java
Rc2exampleProject/bar2/src/main/: AndroidManifest.xml
Rc2exampleProject/bar2/src/main/res/values/: strings.xml
Rc2exampleProject/bar2/src/test/java/com/gpxblog/bar2/: ExampleUnitTest.java
Rc2exampleProject/bar3/: CMakeLists.txt  build.gradle
Rc2exampleProject/bar3/src/androidTest/java/com/gpxblog/bar3/: ExampleInstrumentedTest.java
Rc2exampleProject/bar3/src/main/: AndroidManifest.xml
Rc2exampleProject/bar3/src/main/res/values/: strings.xml
Rc2exampleProject/bar3/src/test/java/com/gpxblog/bar3/: ExampleUnitTest.java
Rc2exampleProject/foo/: CMakeLists.txt  build.gradle
Rc2exampleProject/foo/src/androidTest/java/com/gpxblog/foo/: ExampleInstrumentedTest.java
Rc2exampleProject/foo/src/main/: AndroidManifest.xml
Rc2exampleProject/foo/src/test/java/com/gpxblog/foo/: ExampleUnitTest.java
Rc2exampleProject/foo2/: CMakeLists.txt  build.gradle
Rc2exampleProject/foo2/src/androidTest/java/com/gpxblog/foo2/: ExampleInstrumentedTest.java
Rc2exampleProject/foo2/src/main/: AndroidManifest.xml
Rc2exampleProject/foo2/src/main/res/values/: strings.xml
Rc2exampleProject/foo2/src/test/java/com/gpxblog/foo2/: ExampleUnitTest.java
Rc2exampleProject/foo3/: build.gradle
Rc2exampleProject/foo3/src/androidTest/java/com/gpxblog/foo3/: ExampleInstrumentedTest.java
Rc2exampleProject/foo3/src/main/: AndroidManifest.xml
Rc2exampleProject/foo3/src/main/res/values/: strings.xml
Rc2exampleProject/foo3/src/test/java/com/gpxblog/foo3/: ExampleUnitTest.java
Rc2exampleProject/foo4/: CMakeLists.txt  build.gradle
Rc2exampleProject/foo4/src/androidTest/java/com/gpxblog/foo4/: ExampleInstrumentedTest.java
Rc2exampleProject/foo4/src/main/: AndroidManifest.xml
Rc2exampleProject/foo4/src/main/res/values/: strings.xml
Rc2exampleProject/foo4/src/test/java/com/gpxblog/foo4/: ExampleUnitTest.java
Rc2exampleProject/gradle/wrapper/: gradle-wrapper.properties
